GitHub desktop not working
?

--- a/LeagueQuizBank_HTML/index.html
+++ b/LeagueQuizBank_HTML/index.html
@@ -4,24 +4,47 @@
         League Quiz Bank
     </title>
     <head>
+        <link href="https://fonts.googleapis.com/css?family=Quicksand:400" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="main.css">
+        <script src='main.js'></script>
     </head>
     <body>
-        <div id='wrapper'>
-            <div id='user_pass_wrapper'>
-                <div id='username'>
-                    Username <input type="text" name="usrname"><br>
+        <div id='all_wrapper'>
+            <div id='head'>
+                <h2 id='head_text'>The League Of Amazing Programmers Quiz Bank</h2>
+            </div>
+            <div id='wrapper'>
+                <div id='league_picture_container'>
+                    <img id='league_picture' src='LeagueLogoFFINAL2.jpg'/>
                 </div>
-                <div id='password'>
-                    Password <input type="text" name="usrname"><br>
+                <div id='content'>
+                    <div id='user_pass_wrapper'>
+                        <div id='username'>
+                            <input type="text" placeholder="Username" name="usrname" class='default_input' id='username_input'><br>
+                        </div>
+                        <div id='password'>
+                            <input type="text" placeholder="Password" class='default_input'><br>
+                        </div>
+                    </div>
+                    <div id=student_teacher_wrapper>
+                        <div id='student'>
+                            <button class='select_button' id='student_button'>Student</button>
+                        </div>
+                        <div id='teacher'>
+                            <button class='select_button' id='teacher_button'>Teacher</button>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div id=student_teacher_wrapper>
-                <div id='student'>
-                    <button>Student</button>
+            <div id='footer'>
+                <div id='panel_left'>
+                    <img id='league_bolt' src='bolt.png' />
                 </div>
-                <div id='teacher'>
-                    <button>Teacher</button>
+                <div id='center'>
+                    <p id='footer_text'>The League Quiz Bank was created by Team Starfish. Check out their GitHub by clicking the right side icon! </p>
+                </div>
+                <div id='panel_right'>
+                    <img id='github' src="transparentgithub.png" />
                 </div>
             </div>
         </div>
