--- a/LeagueQuizBank_HTML/index.html
+++ b/LeagueQuizBank_HTML/index.html
@@ -17,13 +17,13 @@
                 <div id='league_picture_container'>
                     <img id='league_picture' src='LeagueLogoFFINAL2.jpg'/>
                 </div>
-                <div id='content'>
+                <form id='content' method="post" action="">
                     <div id='user_pass_wrapper'>
                         <div id='username'>
                             <input type="text" placeholder="Username" name="usrname" class='default_input' id='username_input'><br>
                         </div>
                         <div id='password'>
-                            <input type="text" placeholder="Password" class='default_input' id='password_input'><br>
+                            <input type="password" placeholder="Password" class='default_input' id='password_input'><br>
                         </div>
                     </div>
                     <div id=student_teacher_wrapper>
@@ -34,7 +34,7 @@
                             <button class='select_button' id='teacher_button'>Teacher</button>
                         </div>
                     </div>
-                </div>
+                </form>
             </div>
             <div id='footer'>
                 <a id='panel_left' href='http://www.jointheleague.org/'>
