Did something met some people had some fun
My favorite fruit is orange slices

--- a/LeagueQuizBank_HTML/teacher.html
+++ b/LeagueQuizBank_HTML/teacher.html
@@ -14,8 +14,8 @@
             </div>
             <ul id='navbar'>
                 <li><a href="#">Content Management</a></li>
-                <li><a href="#">Score Viewer</a></li>
-                <li><a href="#">Remote Settings</a></li>
+                <li><a href="#">Something ?</a></li>
+                <li><a href="#">Something Else ?</a></li>
             </ul>
             <div id='sidebar'>
                 <button onclick='dialogCreate()'>Create Quiz</button>
@@ -23,14 +23,22 @@
                 <button>Issue Quiz</button>
                 <button>Delete Quiz</button>
             </div>
-            <div id='stray_div'>
+            <a href='#' id='stray_div'>
                 <img src="pinkbolt.png"/>
-            </div>
+            </a>
             <div id='nothingtopreview'>
-                <p>Nothing to preview</p>
+                <!--p>Nothing to preview</p-->
             </div>
             <div id='content'>
-            </div>
+                <center>
+                    <h1>League of Amazing Programmers <br></h1>
+                    <h2>Quiz Generator<br></h2>
+                    <input type='text' id='title' value='QUIZ TITLE'/><br><br>
+                <hr size='3'>
+                </center>
+                <div id='questionBody'></div>
+                <script src='quiz_body.js'></script>
+                </div>
             <div id='tint_cover'></div>
         </div>
     </body>
